--- a/src/app/notes/new/new.module.scss
+++ b/src/app/notes/new/new.module.scss
@@ -62,7 +62,7 @@
 .saveButton {
   padding: 0.75rem 1.5rem;
   background: linear-gradient(90deg, #b7e4c7 0%, #95d5b2 100%);
-  color: #fff;
+  color: #207520;
   border: none;
   border-radius: 8px;
   font-size: 1rem;
